k8s-235/apps/ctfnote/base/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ctfnote
  labels:
    prometheus: k8s
