k8s-235/apps/ctfnote/base/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ctfnote
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - ctfnote.tdude.co
    secretName: ctfnote-tdude-co-tls
  rules:
  - host: ctfnote.tdude.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ctfnote
            port:
              number: 80
